--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
 		<version>2.7.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bezkoder</groupId>
-	<artifactId>spring-boot-sql-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>com.okcopy</groupId>
+	<artifactId>spring-boot-with-sql-server</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>spring-boot-sql-server</name>
 	<description>Spring Boot + SQL Server (MSSQL) example with JPA</description>
 	<properties>
